Fix chat layout on small devices when users list is hidden
Fixes #1092

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1856,6 +1856,10 @@ kbd {
 		display: block;
 	}
 
+	#chat .channel .chat {
+		right: 0;
+	}
+
 	#chat .sidebar {
 		right: -180px;
 	}
